--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Oswald&display=swap');
+
 body {
-    font-family: Arial;
-   
+    font-family: 'Lato';
+    font-size: 300;
+
 }
