--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Oswald&display=swap');
 
 body {
-    font-family: 'Lato';
+    font-family: 'Lato', sans-serif;
     font-size: 300;
+    color: #3a3a3a;
+}
 
+h1, h2 {
+    font-family:'Oswald', sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 4px;
+    color: #252525;
+
+}
+#logo {
+    float: left;
+    font-size: 280%;
 }
