--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,9 +45,37 @@ h1, h2 {
     border-bottom: 1px solid #3a3a3a;
 }
 
+#hero-image {
+    height: 600px;
+    width: 100%;
+    background: url(../images/hero-image.webp) no-repeat center center;
+
+    animation: hero-zoom 5s forwards;
+
+}
+ #hero-outer {
+    height: 600px;
+    width: 100%;
+    overflow: hidden;
+ }
+
+
+@keyframes hero-zoom {
+    from{
+        transform: scale(1);
+    }
+    to {
+        transform: scale(1.1);
+    }
+
+}
 
 
 
+
+
+
+ 
 
 
 
