--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,6 +45,12 @@ h1, h2 {
     border-bottom: 1px solid #3a3a3a;
 }
 
+#cover-text, #cover-text h2 {
+    color: white;
+
+
+}
+
 #hero-image {
     height: 600px;
     width: 100%;
@@ -57,6 +63,9 @@ h1, h2 {
     height: 600px;
     width: 100%;
     overflow: hidden;
+
+    position: relative;
+
  }
 
 
@@ -67,6 +76,27 @@ h1, h2 {
     to {
         transform: scale(1.1);
     }
+
+}
+
+#cover-text {
+    font-size: 130%;
+    font-family:  Oswald;
+    text-transform: uppercase;
+    letter-spacing: 4px;
+
+    width: 300px;
+    height: 200px;
+
+    padding-top: 40px;
+    padding-left: 10px;
+
+    background-color: rgba(241, 109, 107, .7);
+
+    bottom: 30px;
+    right: 150px;
+
+    position: absolute;
 
 }
 
