--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,13 +38,15 @@ h1, h2 {
     color: inherit;
 }
 
+.active  {
+    border-bottom: 1px solid #3a3a3a;
+}
+
 #menu a:hover {
     border-bottom: 1px solid #3a3a3a;
 }
 
-.active {
-    border-bottom: 1px solid #3a3a3a;
-}
+
 
 #cover-text, #cover-text h2 {
     color: white;
@@ -233,5 +235,21 @@ footer {
     padding: 5%;
     color: #3a3a3a;
 }
+
+#photos {
+    clear: both;
+    line-height: 0;
+    column-count: 4;
+    column-gap: 0;
+
+}
+
+#photos > img {
+    width: 100%;
+
+}
+
+
+
 
 
