gallerie gemacht funktuoniert aber nicht

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -277,9 +277,19 @@ footer {
         padding: 0;
     }
 
+    #times > div {
+        width:  100%;
+        clear: both;
+        height: 150px;
+        padding: 0;
+        
+
+    }
+
     hr {
         display: none;
     }
+
 
 }
 
@@ -325,11 +335,27 @@ footer {
 
     }
 
+    #photo {
+        column-count: 3;
+
+    }
+
+}
+
+@media screen and(max-width: 800px ) {
+
+    #photo {
+        column-count: 2;
+
+    }
+
+
+
+
+
 
     
 }
-
-
 
 
 
